--- a/Hardhat project/package.json
+++ b/Hardhat project/package.json
@@ -1,15 +1,16 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "hardhat": "^2.5.0",
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@openzeppelin/contracts": "^4.7.0",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.9",
     "mocha": "^10.0.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.0",
     "dotenv": "^16.0.1"
   }
 }
